--- a/hubungi.html
+++ b/hubungi.html
@@ -94,11 +94,11 @@
             <div class="skills">
             
                  <!-- <div class="skill">Klik Disinii</div> -->
-                 <a class="skill" href="ryy.html">Klik Disini</a>
+                 <a class="skill" href="index.html">Klik Disini</a>
             </div>
         </section>
         </div>
-        <img src="index.html" alt="Contact Photo" class="contact-photo">
+        <img src="ryy.jpg" alt="Contact Photo" class="contact-photo">
     </div>
 </body>
 </html>
